# PYON

./: README.md  setup.sh
txtboard-core/: Cargo.toml
txtboard-core/src/: ban.rs  board.rs  chat.rs  identity.rs  lib.rs  main.rs  store.rs
txtboard-srv/: Gemfile  README.md  server.rb
txtboard-srv/lib/txtboard/: ban_list.rb  identity.rb  protocol.rb  relay_client.rb  relay_server.rb  sync.rb
txtboard-tui/: Makefile  README.md  setup.sh  txtboard-portable
txtboard-tui/src/: board_view.c  board_view.h  boards.c  boards.h  config.c  config.h  home.c  home.h  main.c  relay.c  relay.h  ui.c  ui.h
